# numly

./: .gitignore  LICENSE  gitignore  numerals.py  pyproject.toml  readme.md  setup.py  to do tasks
.github/workflows/: publish.yml
numly/: __init__.py  arabic_indic.py  babylonian.py  base.py  chinese.py  convert.py  egyptian.py  greek.py  mayan.py  roman.py  tamil.py  words.py
numly.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
