[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "numly"
version         = "0.1.0"
description     = "Convert numbers across numeral systems — Roman, Chinese, Greek, Egyptian, Arabic-Indic and more."
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.8"
authors         = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = [
    "numerals", "roman", "chinese", "greek", "egyptian",
    "arabic-indic", "number", "converter", "numly"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.urls]
Homepage   = "https://github.com/yourusername/numly"
Repository = "https://github.com/yourusername/numly"
Issues     = "https://github.com/yourusername/numly/issues"
